src/test/deca/codegen/invalid/compile/div-zero-op-cmp.deca
// Programme testant la division par zéro dans une comparaison

{
    boolean b = 1 < 2/0;
}